--- a/Public/assets/css/default.css
+++ b/Public/assets/css/default.css
@@ -1526,3 +1526,131 @@ span.make-new-topic {
     float: left;
     font-size: 12px;
 }
+
+.topic-actions .user-reaction {
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    float: left;
+    margin-left: 5px;
+    border-radius: 50%;
+    position: relative;
+    margin-top: 10px;
+}
+
+.topic-actions .user-reaction.reaction-like::before,
+.topic-actions .user-reaction.reaction-unlike::before,
+.topic-actions .user-reaction.reaction-love::before { 
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 25%;
+    bottom: 0;
+    right: 0;
+    background-color: green;
+}
+.topic-actions .user-reaction.reaction-love::before { background-color: red; }
+.topic-actions .user-reaction.reaction-unlike::before { background-color: pink; }
+
+.swiper-container.slide {
+    width: 60%;
+    height: 250px;
+    margin-top: -40px;
+    float: left;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.swiper-container.slide .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    border-radius: 5px;
+    border: 3px solid #eee;
+}
+
+.swiper-info {
+    width: calc(100% - 10px);
+    background-color: white;
+    padding: 5px;
+    position: absolute;
+    bottom: 0;
+    margin: 5px;
+    left: 0;
+    border-radius: 5px;
+}
+
+.swiper-title,
+.swiper-description {
+    width: 100%;
+    padding: 5px 5px;
+    color: black;
+    font-size: 14px;
+    float: left;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.swiper-description { border-radius: 0; padding: 2px 5px; margin-top: -10px; }
+.swiper-title a { font-weight: 700; color: black; }
+
+.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction { bottom: 90%; }
+
+.container-news {
+    width: calc(37% - 10px);
+    margin-top: -80px;
+    margin-right: 10px;
+    float: right;
+    height: 290px;
+    position: relative;
+    border-radius: 5px;
+    z-index: 1;
+    border: 3px solid #eee;
+    background-color: white;
+}
+
+.container-news .box-new {
+    width: 100%;
+    height: 67px;
+    margin-top: 5px;
+    position: relative;
+    background-color: white;
+    overflow: hidden;
+}
+
+.container-news .box-new:first-of-type { margin-top: 0; }
+
+.container-news .box-new .image {
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 3.5px;
+    float: left;
+    border-radius: 5px;
+}
+
+.container-news .box-new .title {
+    width: calc(100% - 85px);
+    margin: 0px 5px;
+    float: left;
+}
+
+.container-news .box-new .title a {
+    font-size: 13px;
+    font-weight: 600;
+    color: #202020;
+}
+
+.container-news .box-new .description {
+    width: calc(100% - 85px);
+    margin: 0px 5px;
+    float: left;
+    font-size: 12px;
+    font-weight: 300;
+    color: #aaa;
+    line-height: 13px;
+}
